<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_time_attr"
    tools:context=".AddTodoActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/add_todo_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="left|center_vertical"
            android:text="@string/add_todo_label"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
            android:textStyle="italic" />
    </androidx.appcompat.widget.Toolbar>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="360dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="32dp"
        app:cardCornerRadius="10dp"
        android:elevation="8dp"

        android:layout_below="@id/add_todo_toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/add_activity_linearLayout_show_status"
                style="@style/todo_radio_list_layout"
                android:layout_width="10dp"
                android:layout_marginLeft="48dp"

                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    style="@style/todo_status_bar"
                    android:background="@color/normal" />

                <ImageView
                    style="@style/todo_status_bar"
                    android:background="@color/urgent" />

                <ImageView
                    style="@style/todo_status_bar"
                    android:background="@color/daily" />

                <ImageView
                    style="@style/todo_status_bar"
                    android:background="@color/cold" />

            </LinearLayout>

            <RadioGroup
                android:id="@+id/add_todo_radio_group"
                style="@style/todo_radio_list_layout"
                android:layout_width="160dp"
                android:layout_marginLeft="24dp"

                app:layout_constraintLeft_toRightOf="@id/add_activity_linearLayout_show_status"
                app:layout_constraintTop_toTopOf="parent">

                <RadioButton
                    android:id="@+id/add_todo_button_normal"
                    style="@style/edit_todo_radio_button"
                    android:checked="true"
                    android:text="@string/type_normal" />

                <RadioButton
                    android:id="@+id/add_todo_button_urgent"
                    style="@style/edit_todo_radio_button"
                    android:text="@string/type_urgent" />

                <RadioButton
                    android:id="@+id/add_todo_button_daily"
                    style="@style/edit_todo_radio_button"
                    android:text="@string/type_daily" />

                <RadioButton
                    android:id="@+id/add_todo_button_cold"
                    style="@style/edit_todo_radio_button"
                    android:text="@string/type_cold" />
            </RadioGroup>

            <TextView
                android:id="@+id/add_todo_description_tag"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginLeft="36dp"
                android:layout_marginTop="20dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:gravity="bottom"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                app:layout_constraintTop_toBottomOf="@id/add_todo_radio_group"
                android:text="描述:" />

            <EditText
                android:id="@+id/add_todo_edit_content"
                android:layout_width="180dp"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:maxLength="15"
                android:paddingStart="12dp"
                android:singleLine="true"
                android:textSize="20sp"
                app:layout_constraintLeft_toRightOf="@id/add_todo_description_tag"
                app:layout_constraintTop_toTopOf="@id/add_todo_description_tag" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/add_todo_button_submit"
        android:layout_width="110dp"
        android:layout_height="50dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="36dp"
        android:layout_marginBottom="64dp"
        android:background="@drawable/main_6dp_rectangle"
        android:elevation="6dp"
        android:gravity="center"
        android:text="@string/done"
        android:textColor="@color/grey100"
        android:textSize="28sp" />


</RelativeLayout>