<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/fragment_now_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/item_todo" />

    <TextView
        android:id="@+id/fragment_now_button_add"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/main_6dp_rectangle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="+"
        android:textSize="32sp"
        android:textColor="@color/grey100"
        android:gravity="center"
        android:layout_margin="40dp"
        android:elevation="10dp" />

</androidx.constraintlayout.widget.ConstraintLayout>