...
            android:id="@+id/fragment_all_radio_group"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/fragment_all_radio_button_all"
                style="@style/fragment_all_select_radio_button"
                android:checked="true"
                android:text="@string/type_all" />

            <RadioButton
                android:id="@+id/fragment_all_radio_button_normal"
...
                style="@style/fragment_all_select_radio_button"
                android:text="@string/type_cold" />
        </RadioGroup>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/fragment_all_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_all_select_bar"
        tools:listitem="@layout/item_todo" />
</androidx.constraintlayout.widget.ConstraintLayout>
