...
                app:layout_constraintTop_toBottomOf="@id/edit_todo_delete_button" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/edit_todo_button_submit"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="36dp"
        android:layout_marginBottom="60dp"
...
